# quant-backtester

./: .env  .gitignore  README.md  pyproject.toml
data/cache/: format_map.py  raw_sectors.json  stock_pool.json  stock_sector_map.json
deploy/: quant-backtester.service  sundial.service
docs/: DESIGN-sundial.md  DESIGN.md  PLAN-sundial.md  sector_data.md
scripts/: batch_fetch_sectors.py  collect_hot_rank.py  hot_rank_snapshot.sh  toggle-public.sh
src/data/: sundial.db
src/quant_backtester/: __init__.py  auth.py  config.py  main.py
src/quant_backtester/data/: __init__.py  cache.py  fetcher.py  stock_pool.py
src/quant_backtester/engine/: __init__.py  backtest.py  indicators.py  metrics.py  portfolio.py
src/quant_backtester/strategies/: __init__.py  base.py  kdj_cross.py  ma_long_alignment.py  ma_trend.py  macd_cross.py  macd_divergence.py  registry.py  weekly_daily_kdj.py
src/sundial/: config.py  db.py  main.py
src/sundial/dashboard/: index.html
src/sundial/data/: baostock_api.py  eastmoney_api.py  ths_api.py  ths_trade_api.py
src/sundial/industry_data/: commodity_catalog.json  commodity_selection.json  index.json  macro-industry.json
src/sundial/services/: dashboard.py  hot_rank.py  ladder.py  (+1 more)
tests/: __init__.py  conftest.py  test_cache.py  test_engine.py  test_fetcher.py  test_indicators.py  test_metrics.py  test_portfolio.py  test_registry.py  test_sector_enrich.py  test_stock_pool.py  test_strategies.py
tests/sundial/: conftest.py  test_api.py  test_config.py  test_db.py  test_ladder.py  test_sentiment.py
tests/test_data/: test_config.py
(+14 files in other folders)
