[project]
name = "sundial"
version = "0.1.0"
description = "日晷 — A股市场数据看板"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "baostock",
    "akshare",
    "httpx",
    "pandas",
    "mootdx",
    "numpy",
    "scipy",
    "apscheduler",
]

[project.scripts]
sundial = "sundial.main:main"
